fixed css issues for chat. username is now same text color and messages align correctly

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -90,12 +90,16 @@ h1, h2, h3 {
 }
 
 .drug-heading {
-  text-decoration: underline;
+  font-weight: bold;
   padding: 3%;
 }
 
 #search {
   margin: 2%;
+}
+
+.nav-item{
+  text-align: right;
 }
 
 
